[tool.poetry]
name = "music-transformer-script"
version = "0.1.0"
description = ""
authors = ["ot07 <ot07neoki@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.*"
gym = "0.17.3"
magenta = "2.1.3"
midi2audio = "0.1.1"
numpy = "1.19.0"
tensor2tensor = "1.14.1"
tensorflow = "1.15.2"
tensorflow-datasets = "3.2.1"
tensorflow-probability = "0.7.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
